TEST_PROGRAMS/VALID/luke_emery-fertitta/arithmetic.min
# perform arithmetic ops floats and test order of ops implementation

var a: float;
var b: float;
var c: float;
var d: float;

a = 1. + 3;
b = 0.5 + 0.2;
c = a + b * a - b / a;
d = (a + (b * a)) - (b/a);

if c - d then
	print "order of ops correct";
else
	print "order of ops incorrect";
	print "Did you implement strings incorrectly too? 0.!? ";
endif
